# LLM-knowledge-base

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  ERROR_LOG.md  Makefile  PENDING_LOG.md  README.en.md  README.md  REPORT.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  operational_task.yml
.github/workflows/: kb-doc-governance.yml  kb-jobs-and-health-gate.yml  tests.yml
.pi/: manifest.yaml
docs/: API.md  OBSIDIAN.md  SENSITIVE_CONTENT_POLICY.md
docs/adr/: 0001-kb-source-of-truth-for-book-import-and-optional-llm.md  0002-typer-cli-framework.md  0003-git-versioning-strategy.md  0004-keyword-search-strategy.md  0005-stochastic-heal-strategy.md  0006-pal-inspired-routing-memory-and-guardrails-foundation.md  0007-explicit-sensitive-and-no-commit-controls.md  0008-wikilink-traversal-as-qa-context-enrichment.md  0009-outputs-store-separated-from-wiki.md  0010-belt-and-suspenders-llm-output-format-defense.md  0011-externalize-user-corpus-from-engine-repo.md  0012-provider-model-compatibility-and-resource-limit-fallback.md  0013-claim-centric-lifecycle-and-hybrid-retrieval-foundation.md  0014-release-version-source-of-truth.md  0015-runtime-topic-taxonomy.md  0016-explicit-commit-activation.md
docs/architecture/: ALBION_EVALUATION.md  ANALYSIS_DOCS.md  ARCHITECTURE.md  ARTIFACT_POLICY.md  CODEBASE_SPEC_COMPLIANCE_LOTE2_REPORT.md  DATA_POLICY.md  DEBT_REPORT.md  DEPLOYMENT.md  LLM_WIKI_V2_BLUEPRINT.md  PAL_FOUNDATIONS_ROADMAP.md  RTK_STYLE_BLUEPRINT.md  SDD.md  SDD_TDD_CONFORMANCE_REPORT.md  SPEC_FORMAT.md  TDD.md  TEST_COVERAGE_REPORT.md
docs/facts/: FACTS.md
docs/handoffs/: 2026-06-18-opencode-kimi-k27-topic-routing.md  README.md
docs/policies/: DATA_POLICY.md
docs/reports/: CODEBASE_SPEC_COMPLIANCE_MATRIX.md  CODEBASE_SPEC_COMPLIANCE_PLAN.md  COVERAGE_2026-04-22.md  DEBT_2026-04-22.md  TEST_COVERAGE_REPORT.md  (+1 more)
examples/: README.md
kb/: __init__.py  archive.py  audit.py  book_import.py  book_import_core.py  book_import_pdf.py  claims.py  cli.py  client.py  compile.py  config.py  diff.py  discovery.py  doc_gate.py  frontmatter.py  fsutil.py  git.py  graph.py  guardrails.py  handoff.py  heal.py  jobs.py  lint.py  outputs.py  qa.py  router.py  search.py  state.py  stats.py  templates_loader.py  web_ingest.py
memory/: MEMORY.md  active_fronts.md  handoff.md  next_steps.md  pitfalls.md  project_state.md  stable_decisions.md
tests/: conftest.py
wiki/: _index.md
(+185 files in other folders)
